--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,9 @@
 language: python
 python:
  - "3.7"
+install:
   - pip install requests
 # command to run tests
 script:
  - python -m unittest Test
+
